--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,12 @@ body {
   background-color: brown;
   text-align: center;
   font-size: 5rem;
-  font-family: 'East Sea Dokdo', cursive;
+  font-family: "East Sea Dokdo", cursive;
 }
 
+.App {
+  cursor: pointer;
+}
 .App h1 {
   margin: 0;
   color: lightyellow;
